# GitPeek

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gitpeek/: __init__.py  main.py
