[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "GitPeek"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A simple CLI tool to fetch and display recent Github user activity."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/your-username/GitPeek"
"Bug Tracker" = "https://github.com/your-username/GitPeek/issues"

[project.scripts]
gitpeek = "gitpeek.main:main" 